# os-vif

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  glossary.rst  index.rst  vif_types.rst
doc/source/contributor/: contributing.rst
doc/source/plugins/: linux-bridge.rst  ovs.rst
doc/source/reference/: glossary.rst
doc/source/user/: host-info.rst  usage.rst  vif-types.rst
doc/source/user/plugins/: linux-bridge.rst  noop.rst  ovs.rst
os_vif/: __init__.py  exception.py  i18n.py  opts.py  plugin.py  utils.py  version.py  vnic_types.py
os_vif/internal/: __init__.py
os_vif/internal/command/ip/: __init__.py  api.py  impl_pyroute2.py  impl_shell.py  ip_command.py
os_vif/internal/command/ip/linux/: impl_pyroute2.py
os_vif/internal/ip/: api.py  ip_command.py
os_vif/internal/ip/linux/: impl_pyroute2.py
os_vif/internal/ip/windows/: impl_netifaces.py
os_vif/objects/: __init__.py  base.py  fields.py  fixed_ip.py  host_info.py  instance_info.py  network.py  route.py  subnet.py  vif.py
os_vif/tests/: test_exception.py  test_fields.py  test_host_info.py  test_os_vif.py  test_vif.py
os_vif/tests/functional/: base.py  privsep.py
os_vif/tests/unit/: base.py  test_base.py  test_exception.py  test_host_info.py  test_objects.py  test_os_vif.py  test_utils.py  test_vif.py
playbooks/openstack-tox-functional-ovs-with-sudo/: Gentoo.yaml  pre.yaml
playbooks/os-vif-ovs/: run.yaml
releasenotes/notes/: OVSVif-hybrid-unplug-f37bf57bc8e913de.yaml  add-abstract-ovsdb-api-8f04df58d4ed5b73.yaml  add-fast-path-vhostuser-support-fe87e558326909b6.yaml  add-no-op-plugin-763a6703e7328a24.yaml  add-ovs-representor-portprofile-5f8290e5a40bf0a4.yaml  add-ovs-vhostuser-support-2ba8de51c1f3a244.yaml  add-ovsdb-native-322fffb49c91503d.yaml  add-tap-creation-support-2069718-abc123.yaml  always-plug-vifs-for-ovs-1d033fc49a9c6c4e.yaml  brctl-removal-a5b0e69b865afa57.yaml  bug-1892132-812e6d5ce0588ebb.yaml  contextlib-and-nested-with-statements-2747a9ebb9a5bfd7.yaml  default-qos-policy-for-ovs-26f8806046a59c82.yaml  default-to-native-ovsdb-driver-112fb5adf6e19a30.yaml  deprecate-linuxbridge-support-d278d4bbdff8e8bc.yaml  deprecate-version-module-5143dcdfa5129b30.yaml  deprecate-windows-support-49f5ca1b1a1f4d66.yaml  do-not-force-mac-ageing-c6e8d750130c5740.yaml  drop-py36-support-0e9b07073f6ad73f.yaml  drop-python-3-10-acfd8a708c28c831.yaml  ensure-ovs-bridge-a0c1b51f469c92d0.yaml  extend-vhostuser-object-fada14a1457d4e56.yaml  fix-broken-dataplane-on-nova-restart-with-isolate_vif-71617a41741b33e8.yaml  fix-ovs-plugin-describe-049750609559f1ba.yaml  fix-stevedore-entrypoints-8002ec7a5166c977.yaml  fix-vif-openvswitch-fa0d19be9dd668e1.yaml  generic-datapath-offloads-41cabb6842b41533.yaml  initial-release-2c71d6bbf55f763b.yaml  oslo-config-opts-entrypoints-e83f907b686d774a.yaml  per-port-bridge-c6a50179a0256de3.yaml  port-profile-info-linux-bridge-4800f5a0b7328615.yaml  port-profile-info-ovs-63b46a3eafc11de2.yaml  prevent-lb-reply-arp-6459133bfb056069.yaml  remove-linuxbridge-support-a11d1c866413f131.yaml  remove-windows-23df1c587d505d72.yaml  remove_iptools_implementation-2eb866573a680e61.yaml  rename-ovs-plugin-049750609559f1ba.yaml  revert-always-plug-port-for-ovs-hybrid-plug-false-dc015985cbc5443b.yaml  vhost-user-mtu-support-cbc7d02a6665fab1.yaml  vhost-user-reconnect-fa4cbb731b787f71.yaml
releasenotes/source/: conf.py  index.rst
vif_plug_linux_bridge/: constants.py  iptables.py  linux_bridge.py  linux_net.py  privsep.py
vif_plug_linux_bridge/tests/: test_linux_net.py  test_plugin.py
vif_plug_linux_bridge/tests/unit/: test_linux_net.py  test_plugin.py
vif_plug_noop/: noop.py
vif_plug_noop/tests/unit/: test_plugin.py
vif_plug_ovs/: constants.py  exception.py  i18n.py  linux_net.py  ovs.py  ovs_hybrid.py  privsep.py
vif_plug_ovs/ovsdb/: api.py  impl_idl.py  impl_vsctl.py  ovsdb_lib.py
vif_plug_ovs/tests/: test_linux_net.py  test_plugin.py
vif_plug_ovs/tests/functional/: base.py  test_plugin.py
vif_plug_ovs/tests/functional/ovsdb/: test_ovsdb_lib.py
vif_plug_ovs/tests/unit/: test_linux_net.py  test_plugin.py
vif_plug_ovs/tests/unit/ovsdb/: test_impl_vsctl.py  test_ovsdb_lib.py
(+10 files in other folders)
