[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "os_vif"
description = "A library for plugging and unplugging virtual interfaces in OpenStack."
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "Apache-2.0"}
dynamic = ["version", "dependencies"]
requires-python = ">=3.11"
classifiers = [
  "Environment :: OpenStack",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://docs.openstack.org/os_vif"
Repository = "https://opendev.org/openstack/os_vif"

[project.entry-points."oslo.config.opts"]
"oslo.cache" = "os_vif.opts:list_plugins_opts"

[project.entry-points."os_vif"]
"ovs" = "vif_plug_ovs.ovs:OvsPlugin"
"noop" = "vif_plug_noop.noop:NoOpPlugin"

[tool.setuptools]
packages = [
    "os_vif",
    "vif_plug_noop",
    "vif_plug_ovs",
]

[tool.mypy]
python_version = "3.11"
show_column_numbers = true
show_error_context = true
strict = true
# TODO(stephenfin): Remove this once ovs is typed
disallow_subclassing_any = false
ignore_missing_imports = true
packages = [
    "os_vif",
    "vif_plug_noop",
    "vif_plug_ovs",
]
exclude = "(?x)(doc | releasenotes)"
plugins = ["oslo_versionedobjects.mypy"]

[[tool.mypy.overrides]]
module = [
    "os_vif.tests.*",
    "vif_plug_noop.tests.*",
    "vif_plug_ovs.tests.*",
]
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_subclassing_any = false
