[metadata]
name = os_vif
summary = A library for plugging and unplugging virtual interfaces in OpenStack.
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    os_vif
    vif_plug_linux_bridge

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = os_vif/locale
domain = os_vif

[update_catalog]
domain = os_vif
output_dir = os_vif/locale
input_file = os_vif/locale/os-vif.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = os_vif/locale/os-vif.pot

[entry_points]
os_vif =
    linux_bridge = vif_plug_linux_bridge.linux_bridge:LinuxBridgePlugin
