[metadata]
name = os_vif
summary = A library for plugging and unplugging virtual interfaces in OpenStack.
description_file = README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/os-vif/latest/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    os_vif
    vif_plug_linux_bridge
    vif_plug_ovs
    vif_plug_noop

[entry_points]
os_vif =
    linux_bridge = vif_plug_linux_bridge.linux_bridge:LinuxBridgePlugin
    ovs = vif_plug_ovs.ovs:OvsPlugin
    noop = vif_plug_noop.noop:NoOpPlugin
